--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main>
   <div class="main-container">
   <figure>
-    <img src="./assets/images/illustration-article.svg">
+    <img src="./assets/images/illustration-article.svg" alt="illustration-article">
   </figure>
     
   <h3>Learning</h3>
@@ -29,7 +29,7 @@
   <article>These languages are the backbone of every website, defining structure, content, and presentation.</article>
 
   <footer>
-    <img src="./assets/images/image-avatar.webp">
+    <img src="./assets/images/image-avatar.webp" alt="image-avatar">
     <span>Greg Hooper</span>
   </footer>
   </div>
